gender column processed

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -260,7 +260,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "43f164f2-7b4d-4595-8be9-a3682aedb050",
+       "ref": "20fac5fc-3a72-4883-a749-421f8e82489b",
        "rows": [
         [
          "P186",
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b4343c86",
    "metadata": {},
    "outputs": [
@@ -675,7 +675,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "1d88c74a-44e5-4576-8dfe-2d81768b3e01",
+       "ref": "c45c1622-f664-40d4-8911-2983345f1d84",
        "rows": [
         [
          "P186",
@@ -1053,7 +1053,7 @@
          "type": "float"
         }
        ],
-       "ref": "b159763b-664a-445e-99b6-3518d582158e",
+       "ref": "8223bae1-9753-41fe-87b5-e331b268dd10",
        "rows": [
         [
          "P186",
@@ -2435,7 +2435,7 @@
          "type": "float"
         }
        ],
-       "ref": "3bb2061f-afca-42b9-bdcf-b5d7872d4096",
+       "ref": "d7b25587-6d7b-40c4-9447-7fed57f8590c",
        "rows": [
         [
          "P186",
@@ -3982,7 +3982,7 @@
          "type": "float"
         }
        ],
-       "ref": "6381b79c-bb40-4077-a487-f00b52ac7ec4",
+       "ref": "2b30c790-5d76-4b9e-8bad-3e33cd87178f",
        "rows": [
         [
          "P186",
@@ -5430,7 +5430,7 @@
          "type": "string"
         }
        ],
-       "ref": "51998a34-dacb-45a6-a112-e351040e1afd",
+       "ref": "a126d8f5-9a33-4b81-a2ad-2f4c14173f25",
        "rows": [
         [
          "0",
@@ -6015,7 +6015,7 @@
          "type": "string"
         }
        ],
-       "ref": "d5b589fc-967b-4a84-baa8-405b07d6ef02",
+       "ref": "d161f80f-41bb-4cef-9a7e-f59ffa4240d5",
        "rows": [
         [
          "0",
@@ -6569,8 +6569,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Subregions in sheet 1: {'RCC', 'COMMISSURE', 'LVOTSUBVALVULAR', 'LCC', 'RVOTFREEWALL', 'SUMMIT', 'RVOTSEPTUM'}\n",
-      "Subregions in sheet 2: {'RCC', 'LVOTSUBVALVULAR', 'COMMISURE', 'LCC', 'RVOTFREEWALL', 'RVOTSEPTUM', 'LVOTSUMMIT'}\n"
+      "Subregions in sheet 1: {'SUMMIT', 'RCC', 'RVOTFREEWALL', 'LCC', 'COMMISSURE', 'RVOTSEPTUM', 'LVOTSUBVALVULAR'}\n",
+      "Subregions in sheet 2: {'RCC', 'LVOTSUMMIT', 'COMMISURE', 'RVOTFREEWALL', 'LCC', 'RVOTSEPTUM', 'LVOTSUBVALVULAR'}\n"
      ]
     }
    ],
@@ -6818,7 +6818,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "88171c14-8837-427c-bc87-41fd3b02c516",
+       "ref": "7e1ff450-f0fa-460d-a010-888bbc16fddb",
        "rows": [
         [
          "P186",
@@ -7335,7 +7335,7 @@
       "- LVOT: 37 (28.5%)\n",
       "Missing values: 60 (31.6%)\n",
       "\n",
-      "=== Outcome_C (Specific Regions) Distribution ===\n",
+      "=== Outcome_C (Specific Sub-regions) Distribution ===\n",
       "Class distribution among mapped values:\n",
       "- RVOTSEPTUM: 59 (31.6%)\n",
       "- RVOTFREEWALL: 48 (25.7%)\n",
@@ -7349,7 +7349,7 @@
       "=== Summary ===\n",
       "Total records: 190\n",
       "Usable for Model B (SOO classification): 130 (68.4%)\n",
-      "Usable for Model C (Region classification): 187 (98.4%)\n"
+      "Usable for Model C (Sub-region classification): 187 (98.4%)\n"
      ]
     }
    ],
@@ -7372,7 +7372,7 @@
     "            print(f\"- {value}: {count} ({percent:.1f}%)\")\n",
     "    print(f\"Missing values: {missing_b} ({missing_percent_b:.1f}%)\")\n",
     "    \n",
-    "    print(\"\\n=== Outcome_C (Specific Regions) Distribution ===\")\n",
+    "    print(\"\\n=== Outcome_C (Specific Sub-regions) Distribution ===\")\n",
     "    missing_c = df['Outcome_C'].isna().sum()\n",
     "    missing_percent_c = (missing_c / total) * 100\n",
     "    \n",
@@ -7391,7 +7391,7 @@
     "    print(\"\\n=== Summary ===\")\n",
     "    print(f\"Total records: {total}\")\n",
     "    print(f\"Usable for Model B (SOO classification): {total - missing_b} ({(total - missing_b) / total * 100:.1f}%)\")\n",
-    "    print(f\"Usable for Model C (Region classification): {total - missing_c} ({(total - missing_c) / total * 100:.1f}%)\")\n",
+    "    print(f\"Usable for Model C (Sub-region classification): {total - missing_c} ({(total - missing_c) / total * 100:.1f}%)\")\n",
     "\n",
     "analyze_outcomes(data)"
    ]
@@ -7638,7 +7638,7 @@
       "- LVOT: 51 (26.8%)\n",
       "Missing values: 0 (0.0%)\n",
       "\n",
-      "=== Outcome_C (Specific Regions) Distribution ===\n",
+      "=== Outcome_C (Specific Sub-regions) Distribution ===\n",
       "Class distribution among mapped values:\n",
       "- RVOTSEPTUM: 60 (31.7%)\n",
       "- RVOTFREEWALL: 48 (25.4%)\n",
@@ -7652,7 +7652,7 @@
       "=== Summary ===\n",
       "Total records: 190\n",
       "Usable for Model B (SOO classification): 190 (100.0%)\n",
-      "Usable for Model C (Region classification): 189 (99.5%)\n"
+      "Usable for Model C (Sub-region classification): 189 (99.5%)\n"
      ]
     }
    ],
@@ -7794,7 +7794,7 @@
          "type": "float"
         }
        ],
-       "ref": "7ec7f87a-41b3-4907-af4d-56e05c2469ab",
+       "ref": "e99de22d-648d-446b-b0f2-60b58e5bd5e2",
        "rows": [
         [
          "P186",
@@ -8745,7 +8745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "376d7c4c",
    "metadata": {},
    "outputs": [
@@ -8753,14 +8753,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Remaining data columns:\n",
       "['Sex', 'HTA', 'Age', 'PVC_transition', 'DM', 'DLP', 'Smoker', 'COPD', 'Sleep_apnea', 'CLINICAL_SCORE', 'OTorigin']\n"
      ]
     }
    ],
    "source": [
-    "print(remaining_data.columns.tolist())"
+    "pending_columns = remaining_data.columns\n",
+    "print(pending_columns.to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "c5657568",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "- Sex: 3 missing values (1.6%)\n",
+      "- HTA: 7 missing values (3.7%)\n",
+      "- Age: 4 missing values (2.1%)\n",
+      "- PVC_transition: 10 missing values (5.3%)\n",
+      "- DM: 8 missing values (4.2%)\n",
+      "- DLP: 7 missing values (3.7%)\n",
+      "- Smoker: 9 missing values (4.7%)\n",
+      "- COPD: 8 missing values (4.2%)\n",
+      "- Sleep_apnea: 9 missing values (4.7%)\n",
+      "- CLINICAL_SCORE: 8 missing values (4.2%)\n",
+      "- OTorigin: 1 missing values (0.5%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_missing_values(data, pending_columns)"
    ]
   },
   {
@@ -8768,11 +8795,219 @@
    "id": "2012e1ac",
    "metadata": {},
    "source": [
-    "We'll go through these columns one by one, to assess how relevant they might be, to see how we can preprocess them to be used in the classification models, and how we deal with missing values.\n",
+    "We'll go through these columns one by one, to assess how relevant they might be, to see how we can preprocess them to be used in the classification models, and how we deal with missing values. We have already properly binarized columns, and the only pending processing is to encode the categorical columns that we want to preserve (as well as dealing with missing values of all these columns).\n",
     "\n",
+    "Some functions that will be useful for deciding how to preprocess the columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b6b8bcd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_missing_column_outcomes(df, column_name):\n",
+    "    # Find rows with missing values in the specified column\n",
+    "    missing_data = df[df[column_name].isna()]\n",
+    "    \n",
+    "    if len(missing_data) == 0:\n",
+    "        print(f\"No missing values found in '{column_name}' column.\")\n",
+    "        return\n",
+    "    \n",
+    "    print(f\"Found {len(missing_data)} patients with missing '{column_name}' values:\")\n",
+    "    \n",
+    "    result = missing_data[['Outcome_B', 'Outcome_C']]\n",
+    "    display(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "46bc22e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drop_rows_with_missing_values(df, column_name):\n",
+    "    initial_rows = len(df)\n",
+    "    missing_mask = df[column_name].isna()\n",
+    "    missing_count = missing_mask.sum()\n",
+    "    df = df.dropna(subset=[column_name])\n",
+    "    \n",
+    "    print(f\"Dropped {missing_count} rows with missing '{column_name}' values\")\n",
+    "    print(f\"Dataframe reduced from {initial_rows} to {len(df)} rows\")\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf98456e",
+   "metadata": {},
+   "source": [
     "#### 2.6.1. 'Sex' column\n",
     "\n",
-    "#### 2.6.2. 'HTA' column\n",
+    "We have 3 patients with missing values. This column is important for the model to learn, since some characteristics of ECGs might be explained by the gender of the patient. Inventing a value for this column would not be a good idea as it can lead to a bias in the model, yet we have to assess how significant are these patients for our classification tasks.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "03115615",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 3 patients with missing 'Sex' values:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Outcome_B",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
+         "name": "Outcome_C",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "a4b7031a-7381-46ab-851c-dd79a7cb40ae",
+       "rows": [
+        [
+         "P173",
+         "RVOT",
+         "RVOTFREEWALL"
+        ],
+        [
+         "P164",
+         "RVOT",
+         "RVOTFREEWALL"
+        ],
+        [
+         "P295",
+         "LVOT",
+         "LCC"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 3
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Outcome_B</th>\n",
+       "      <th>Outcome_C</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>P173</th>\n",
+       "      <td>RVOT</td>\n",
+       "      <td>RVOTFREEWALL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P164</th>\n",
+       "      <td>RVOT</td>\n",
+       "      <td>RVOTFREEWALL</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>P295</th>\n",
+       "      <td>LVOT</td>\n",
+       "      <td>LCC</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Outcome_B     Outcome_C\n",
+       "P173      RVOT  RVOTFREEWALL\n",
+       "P164      RVOT  RVOTFREEWALL\n",
+       "P295      LVOT           LCC"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "check_missing_column_outcomes(data, 'Sex')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c69d86c6",
+   "metadata": {},
+   "source": [
+    "We can see that it would not be a big inconvenience to drop these patients:\n",
+    "- For Outcome_B, 2 of the 3 patients are RVOT, and 1 is LVOT. This is roughly close to the current distribution of these labels \"RVOT: 139 (73.2%), LVOT: 51 (26.8%)\". Dropping them won't significantly change the (still unbalanced) distribution of the labels.\n",
+    "- For Outcome_C, all three patients have sub-regions that are neither RCC nor COMMISSURE, so they will be filtered out anyway before training Model C.\n",
+    "\n",
+    "So we can drop them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "413eaa65",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropped 3 rows with missing 'Sex' values\n",
+      "Dataframe reduced from 190 to 187 rows\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = drop_rows_with_missing_values(data, 'Sex')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb572449",
+   "metadata": {},
+   "source": [
+    "#### 2.6.2. 'HTA' column"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10bfced0",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "#### 2.6.3. 'Age' column\n",
     "\n",
@@ -8790,14 +9025,7 @@
     "\n",
     "#### 2.6.10. 'CLINICAL_SCORE' column\n",
     "\n",
-    "#### 2.6.11. 'OTorigin' column\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "#### 2.6.11. 'OTorigin' column\n"
    ]
   },
   {
