patient cases explained

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -129,13 +129,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e25e899",
+   "id": "4110aefb",
    "metadata": {},
    "source": [
     "### 0.2. Patient cases\n",
     "\n",
-    "//TODO: explain how the patient cases are structured on the data file, how we extract them, how many cases we have, what we will consider as a case (demographic data + an ECG worth of data).\n",
+    "The dataset structure consists of patient records where each patient has demographic data (age, sex, height, medical conditions,...) stored in the main `.pkl` file, and multiple ECG recordings per patient stored in the 'Structures' column, corresponding to distinct measurement points with different lead positionings.\n",
     "\n",
+    "Our goal is to have a normalized table-like structure of what we refer to as a \"patient case\". Each patient case consists of a single full ECG paired with the demographic data of that patient. Each patient is identified by a 'PXXX' identifier, so to create our cases we will combine each patient's demographic data with their individual ECG recordings, effectively duplicating demographic information across all ECG segments belonging to that patient."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e25e899",
+   "metadata": {},
+   "source": [
     "## 1. Our approach\n",
     "\n",
     "//TODO: explain system of models, Model A for dimensionality reduction of ECGs, merge this with the encoded demographic data, and then do a filtering step (remove either the SOO or the sub-region) so that we are left with a single target variable, and then train Model B and Model C for classification of the SOO and sub-regions respectively.\n",
