initial explanations/context done

--- a/project_arrhythmias.ipynb
+++ b/project_arrhythmias.ipynb
@@ -146,13 +146,76 @@
    "source": [
     "## 1. Our approach\n",
     "\n",
-    "//TODO: explain system of models, Model A for dimensionality reduction of ECGs, merge this with the encoded demographic data, and then do a filtering step (remove either the SOO or the sub-region) so that we are left with a single target variable, and then train Model B and Model C for classification of the SOO and sub-regions respectively.\n",
+    "### 1.1. Initial considerations and discarded approaches\n",
     "\n",
-    "//TODO: explain how we want to give basically all variability of the dataset to the classification model, but first preprocessing it to represent this same data in a much smaller dimensionality that corresponds to learned, interpretable features.\n",
+    "We were given freedom onto the methods that we can use to solve the problem: whatever classical machine learning methods, deep learning, clustering, dimensionality reduction,...\n",
     "\n",
-    "//TODO: explain how we do transformations of the loaded dataset (dataframe) to clean it/reduce it, inspired by RDD's\n",
+    "Given the clinical nature of the problem, we decided we should add some constraints to the problem, previously introduced in the [README](README.md): interpretability and fast inference.\n",
     "\n",
-    "//TODO: explain what families and kinds of models we are considering for both the dimensionality reduction and the classification, as well as how we plan to use multiple model training and evaluation to find the best performing models for each task.\n"
+    "For this reason, even if we have amounts of **data that could allow us to use deep learning methods, we will focus on classical machine learning** methods that clearly learn the features/patterns/decision criteria, and that can run in extremely lightweight evironments very fast. \n",
+    "\n",
+    "Our approach, therefore, should allow us to 1) understand human-comprehensible features that are important for the tasks, and 2) be able to run the end-to-end prediction system in a few milliseconds client-side on an environment as a browser tab.\n",
+    "\n",
+    "Another choice was made to **leave the \"learning\" and \"deciding what's important\" to the models**. The ones that mathematically optimize the decision criteria from the original data should be the models, not us. This means that we will **not handcraft features and perform manual feature engineering**, and we will attempt to retain as much of the original data variability as possible while reducing/simplifying the data to a smaller set of features that can be used for classification.\n",
+    "\n",
+    "\n",
+    "### 1.2. Our system of models\n",
+    "\n",
+    "```mermaid\n",
+    "flowchart LR\n",
+    "    subgraph Part 1: Site of Origin Classification\n",
+    "      ECG[Pre-processed ECGs] --> A[Model A<br/>Dimensionality Reduction]\n",
+    "      A --> F[Learned Features]\n",
+    "      Dem[Clinical Data] --> B[Model B<br/>Classifier]\n",
+    "      F --> B\n",
+    "      B --> LVOT[LVOT]\n",
+    "      B --> RVOT[RVOT]\n",
+    "    end\n",
+    "```\n",
+    "```mermaid\n",
+    "flowchart LR\n",
+    "    subgraph Part 2: Sub-Region Classification\n",
+    "      ECG2[Pre-processed ECGs] --> A2[Model A<br/>Dimensionality Reduction]\n",
+    "      A2 --> F2[Learned Features]\n",
+    "      F2 --> C[Model C<br/>Classifier]\n",
+    "      Dem2[Clinical Data] --> Filter[Filter only relevant cases]\n",
+    "      Filter --> C\n",
+    "      C --> RCC[RCC]\n",
+    "      C --> COMM[Commissure]\n",
+    "    end\n",
+    "```\n",
+    "\n",
+    "We have opted to build a **two-part, modular system** that first learns a low-dimensional representation of the ECG data, and then uses that representation alongside demographic data from this patient's case to train interpretable classifiers. \n",
+    "\n",
+    "This has the advantage of being **modular**, reusing the same learned representation of the ECG data, and having the training of classifiers be very similar for both tasks. The implications of this is that **in the future we could propose new prediction/classifcation tasks (to predict other values of these same columns or others), and the source code would be essentially the same (!!)**.\n",
+    "\n",
+    "\n",
+    "### 1.3. Our processing pipeline\n",
+    "\n",
+    "For the processing \"pipeline\", we will structure the notebook as a set of mutation steps that transform the data (dataframe) progressively, in controllable steps that also log relevant information about the data at each step. It can be compared to Resilient Distributed Datasets (RDDs) in Apache Spark, where each step is a pure function that transforms the data, but without data copying to keep the memory footprint low:\n",
+    "\n",
+    "```text\n",
+    "unified_df  → f(x) → aligned_df  \n",
+    "aligned_df  → f(x) → reduced_df  \n",
+    "reduced_df  → f(x) → filtered_df\n",
+    "(...)\n",
+    "```\n",
+    "\n",
+    "### 1.4. Our training run\n",
+    "\n",
+    "Once we have produced the final dataframes to given as input to the models to train, we have decided to approach the training of the models as an **automated, efficient search**: using a **hyperparameter search across different model families**.\n",
+    "\n",
+    "We won't manually try different models and parameter combinations. We will instead first analyze all different kind of model families that would be good candidates for our tasks given our constraints. Then we will \"train them all\", and mathematically tune the hyperparameters of each model family to find the best-performing model for each task. \n",
+    "\n",
+    "Instead of full-loops for each model and parameter combination, which would be extremely inefficient (an exhaustive search), we will **first use random searches to locate well-performing parameter combinations** for the different models, and then use libraries that implement **efficient hyperparameter tuning algorithms (like Optuna) to find the best-performing model** for each task.\n",
+    "\n",
+    "Overall, since:\n",
+    "- We will be very restrictive in the amount of data discarded, try to keep as much of the original data as possible\n",
+    "- We will attempt to keep most if not all of the original data variability (yet represented in a lower-dimensional space to both understand the input data better and improve the performance of the classifcation models)\n",
+    "- Will be \"considering all the models\" that could be used for the tasks given our (self-imposed) restrictions, and not just a few hand-picked ones\n",
+    "- Will be using efficient hyperparameter tuning algorithms to find the best-performing model for each task, without manual trial-and-error\n",
+    "\n",
+    "We expect our approach to provide virtually the best possible performance for the tasks in an interpretable-and-fast context.\n"
    ]
   },
   {
